add link to no_links.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <h1>Test</h1>
   <a href="http://google.com">google</a>
   <a href="http://yahoo.com">yahoo</a>
+  <a href="no_links.html">No link page</a>
 </body>
 </html>
